--- a/emensa/composer.json
+++ b/emensa/composer.json
@@ -2,12 +2,6 @@
   "require": {
     "monolog/monolog": "^3.2.0",
     "eftec/bladeone": "^4.1",
-    "ext-mysqli": "*",
-    "illuminate/database": "*"
-  },
-  "autoload": {
-    "classmap": [
-      "models"
-    ]
+    "ext-mysqli": "*"
   }
 }
